--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,9 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
-
+    paths-ignore:
+    - 'README.md'
+    - 'LICENSE.txt'
 jobs:
   ci:
     name: Tests
