--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -1,4 +1,4 @@
-name: "Tests"
+name: "Go Tests"
 
 on:
   pull_request:
@@ -46,6 +46,3 @@ jobs:
         AWS_REGION: "us-east-2"
         AWS_ACCESS_KEY_ID: ${{ secrets.CI_AWS_ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.CI_AWS_SECRET_KEY }}
-
-    - name: Test building container
-      run: make docker-build VERSION=ci && make docker-cleanup VERSION=ci
