--- a/.github/workflows/docker-tests.yml
+++ b/.github/workflows/docker-tests.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        language: [ 'go' ]
+        os: [ 'ubuntu-latest' ]
 
     steps:
     - name: Checkout
