--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
+    paths-ignore:
+    - '**/README.md'
+    - '**/LICENSE.txt'
   schedule:
     - cron: '15 18 * * 5'
 
