--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -5,8 +5,8 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ main ]
     paths-ignore:
-    - 'README.md'
-    - 'LICENSE.txt'
+    - '**/README.md'
+    - '**/LICENSE.txt'
 jobs:
   ci:
     name: Go Tests
